Add portfolio link in footer

--- a/index.html
+++ b/index.html
@@ -489,6 +489,9 @@
             <p><strong>Mikel Aldalur</strong></p>
             <p>Irakaslearen Gaitasun Digitalen Akreditazioa - B1 Maila</p>
             <p>FPIkaskuntzagunea - 2025/2026</p>
+            <p style="margin-top: 15px;">
+                🌐 <a href="https://maldalur.github.io/B1_portfolio_digitala/" target="_blank" style="color: #667eea; text-decoration: none; font-weight: bold;">Portfolio Online</a>
+            </p>
         </footer>
     </div>
 </body>
