--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
                                 <span class="rule-number">10</span>
                                 <span>Irudi Profesionala</span>
                             </h4>
-                            <p>Mantendu irudi profesional bat komunikazio digitalean. Gure irakastola ordezkatzen dugu.</p>
+                            <p>Mantendu irudi profesional bat komunikazio digitalean. Gure ikastetxea ordezkatzen dugu.</p>
                         </div>
                     </div>
                 </div>
