Add video section to portfolio

--- a/index.html
+++ b/index.html
@@ -249,6 +249,15 @@
                         <li style="margin-bottom: 10px;">✅ <strong>1.C Ataza:</strong> Netiketa arauak</li>
                     </ul>
                 </div>
+                
+                <div class="task-card" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white;">
+                    <h3 style="color: white;">🎥 Azalpen Bideoa</h3>
+                    <p style="margin-bottom: 20px;">Hemen ikusgai dago portfolio honen azalpena bideoan:</p>
+                    <video controls style="width: 100%; max-width: 800px; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.3);">
+                        <source src="B1_portfolio_1.mp4" type="video/mp4">
+                        Zure nabigatzaileak ez du bideo hau onartzen.
+                    </video>
+                </div>
             </section>
 
             <!-- 1.A ATAZA: KOMUNIKAZIOA -->
