--- a/index.html
+++ b/index.html
@@ -94,6 +94,23 @@
                         </div>
                     </div>
                     
+                    <div style="background: white; padding: 20px; border-radius: 10px; margin-top: 20px;">
+                        <h4 style="color: #1565c0; margin-bottom: 15px;">📊 PowerPoint Aurkezpena</h4>
+                        <p style="color: #666; margin-bottom: 15px;">Deep Computer Vision - 12 diapositiba</p>
+                        <div style="display: flex; gap: 10px; justify-content: center; flex-wrap: wrap;">
+                            <a href="https://docs.google.com/presentation/d/1mWXg933T77FoVqETz7BqCbqY_9r3HJeA/edit?usp=sharing&ouid=115862801143979037014&rtpof=true&sd=true" 
+                               target="_blank"
+                               style="display: inline-block; padding: 10px 20px; background: #0277bd; color: white; text-decoration: none; border-radius: 5px; font-weight: bold;">
+                                📊 Ikusi Google Drive-n
+                            </a>
+                            <a href="Deep_Computer_Vision_Proiektuak/Deep_Computer_Vision_Aurkezpena.pptx" 
+                               download
+                               style="display: inline-block; padding: 10px 20px; background: #4caf50; color: white; text-decoration: none; border-radius: 5px; font-weight: bold;">
+                                📥 Deskargatu PPT
+                            </a>
+                        </div>
+                    </div>
+                    
                     <div style="text-align: center; margin-top: 25px;">
                         <a href="bidalketa2.html" style="display: inline-block; padding: 15px 40px; background: #1976d2; color: white; text-decoration: none; border-radius: 10px; font-weight: bold; font-size: 1.1em; box-shadow: 0 4px 10px rgba(25,118,210,0.3); transition: all 0.3s;">
                             📖 Ikusi Bigarren Bidalketa Osoa →
