README fitxategiak eguneratu notebook esteka zuzenekin eta informazio zehatzekin

--- a/bidalketa1.html
+++ b/bidalketa1.html
@@ -14,7 +14,7 @@
         </header>
         
         <nav class="main-nav">
-            <a href="sarrera.html">📋 Sarrera</a>
+            <a href="index.html">📋 Sarrera</a>
             <a href="bidalketa1.html" class="active">📦 B1.1 Lehen Bidalketa</a>
             <a href="bidalketa2.html">📦 B1.2 Bigarren Bidalketa</a>
         </nav>
