Bigarren bideoa gehitu (B1_portfolio_2.mp4) HTML guztietan

--- a/index.html
+++ b/index.html
@@ -116,8 +116,11 @@
                         <p style="color: #666; margin-bottom: 15px;">
                             Bigarren bidalketaren eduki guztiak (2.A eta 2.B) azaltzen ditut
                         </p>
-                        <div style="text-align: center; background: #f5f5f5; padding: 40px 20px; border-radius: 8px;">
-                            <p style="color: #999; margin: 0;">📹 Bideoa laster gehituko da</p>
+                        <div style="text-align: center;">
+                            <video controls style="width: 100%; max-width: 700px; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.2);">
+                                <source src="B1_portfolio_2.mp4" type="video/mp4">
+                                Zure nabigatzaileak ez du bideo hau onartzen.
+                            </video>
                         </div>
                     </div>
                     
