--- a/bidalketa1.html
+++ b/bidalketa1.html
@@ -37,10 +37,16 @@
                 <div class="task-card" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white;">
                     <h3 style="color: white;">🎥 Azalpen Bideoa</h3>
                     <p style="margin-bottom: 20px;">Hemen ikusgai dago portfolio honen azalpena bideoan:</p>
-                    <video controls style="width: 100%; max-width: 800px; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.3);">
-                        <source src="B1_portfolio_1.mp4" type="video/mp4">
-                        Zure nabigatzaileak ez du bideo hau onartzen.
-                    </video>
+                    <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 800px; margin: 0 auto;">
+                        <iframe 
+                            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.3);"
+                            src="https://www.youtube.com/embed/TwMaOKJvqq4" 
+                            title="Portfolio Digital B1 - Lehen Bidalketa" 
+                            frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                            allowfullscreen>
+                        </iframe>
+                    </div>
                 </div>
             </section>
 
