--- a/bidalketa2.html
+++ b/bidalketa2.html
@@ -399,11 +399,15 @@ Deep_Computer_Vision_Proiektuak/<br>
                     </p>
                     
                     <!-- Bigarren Bidalketaren Bideoa -->
-                    <div style="text-align: center;">
-                        <video controls style="width: 100%; max-width: 900px; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.2);">
-                            <source src="B1_portfolio_2.mp4" type="video/mp4">
-                            Zure nabigatzaileak ez du bideo hau onartzen.
-                        </video>
+                    <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 900px; margin: 0 auto;">
+                        <iframe 
+                            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.2);"
+                            src="https://www.youtube.com/embed/tGlLE_YwyNQ" 
+                            title="Portfolio Digital B1 - Bigarren Bidalketa" 
+                            frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                            allowfullscreen>
+                        </iframe>
                     </div>
                         
                 </div>
