B1.3: Audio irakurketa play/pause eta hizkuntza kontrolekin + bidalketa3.html dokumentazioa

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <a href="index.html" class="active">📋 Sarrera</a>
             <a href="bidalketa1.html">📦 B1.1 Lehen Bidalketa</a>
             <a href="bidalketa2.html">📦 B1.2 Bigarren Bidalketa</a>
+            <a href="bidalketa3.html">📦 B1.3 Hirugarren Bidalketa</a>
         </nav>
         
         <!-- IRAKURKETA MODUA / MODO LECTURA POR VOZ -->
