3 bidalketako bideoa eginda

--- a/bidalketa3.html
+++ b/bidalketa3.html
@@ -35,6 +35,24 @@
                         <li>🎯 <strong>5.B Ataza:</strong> Aztarna Digitalaren Araberako Ikaskuntza Pertsonalizazioa</li>
                     </ul>
                 </div>
+                
+                <!-- BIDEOA -->
+                <div class="task-card" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); padding: 0; overflow: hidden;">
+                    <div style="padding: 20px; color: white;">
+                        <h3 style="color: white; margin-bottom: 10px;">🎥 Azalpen Bideoa</h3>
+                        <p style="color: #f0f0f0; margin-bottom: 15px;">Behean duzue bidalketa honen azalpen osoa bideoan:</p>
+                    </div>
+                    <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; background: #000;">
+                        <iframe 
+                            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" 
+                            src="https://www.youtube.com/embed/fCNNqMTQJSE?cc_load_policy=1&cc_lang_pref=eu" 
+                            title="B1.3 Hirugarren Bidalketa - Azalpena"
+                            frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+                </div>
             </section>
 
             <!-- 5.A ATAZA: IRISGARRITASUNA -->
