--- a/bidalketa3.html
+++ b/bidalketa3.html
@@ -18,6 +18,7 @@
             <a href="bidalketa1.html">📦 B1.1 Lehen Bidalketa</a>
             <a href="bidalketa2.html">📦 B1.2 Bigarren Bidalketa</a>
             <a href="bidalketa3.html" class="active">📦 B1.3 Hirugarren Bidalketa</a>
+            <a href="bidalketa4.html">📦 B1.4 Laugarren Bidalketa</a>
         </nav>
         
 
