--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <a href="bidalketa1.html">📦 B1.1 Lehen Bidalketa</a>
             <a href="bidalketa2.html">📦 B1.2 Bigarren Bidalketa</a>
             <a href="bidalketa3.html">📦 B1.3 Hirugarren Bidalketa</a>
+            <a href="bidalketa4.html">📦 B1.4 Laugarren Bidalketa</a>
         </nav>
         
         <div class="content">
@@ -63,6 +64,18 @@
                         <li>Erabiltzaile esperientzia inklusibo eta moldagarria.</li>
                     </ul>
                     <a href="bidalketa3.html" style="display:inline-block; margin-top:10px; background:#6a1b9a; color:#fff; padding:10px 16px; border-radius:8px; text-decoration:none; font-weight:600;">🔍 Ikusi Bidalketa 3</a>
+                </div>
+
+                <!-- B1.4 LABURPENA -->
+                <div class="bidalketa-card" style="background:#fff3e0; padding:20px; border-radius:15px; margin-top:25px; box-shadow:0 4px 12px rgba(0,0,0,0.08);">
+                    <h3 style="color:#e65100; margin-top:0;">📦 B1.4 Laugarren Bidalketa: Ikasleen Elkarlanerako Testuingurua</h3>
+                    <ul style="margin-left:20px; line-height:1.6; font-size:0.95em;">
+                        <li>Ikaskuntza plataforma: Moodle (edukia antolatzeko).</li>
+                        <li>Komunikazio tresnak: Email, Google Meet, WhatsApp.</li>
+                        <li>Elkarlan tresnak: Google Drive, GitHub, Google Slides.</li>
+                        <li>Eduki digitalak eskuragarri: Portfolio, Deep CV proiektua, bideoak.</li>
+                    </ul>
+                    <a href="bidalketa4.html" style="display:inline-block; margin-top:10px; background:#e65100; color:#fff; padding:10px 16px; border-radius:8px; text-decoration:none; font-weight:600;">🔍 Ikusi Bidalketa 4</a>
                 </div>
 
                 <!-- Helburu Orokorra -->
