--- a/bidalketa4.html
+++ b/bidalketa4.html
@@ -224,7 +224,7 @@
                     <div style="display: grid; gap: 15px; margin-top: 15px;">
                         <div style="background: #e3f2fd; padding: 15px; border-radius: 8px;">
                             <h5 style="color: #1976d2; margin-bottom: 8px;">🌐 Publikoki Eskuragarri</h5>
-                            <p style="margin: 0;">Portfolio digitala eta GitHub proiektuak publikoki eskuragarri daude, inork ikusi ditzake.</p>
+                            <p style="margin: 0;">Portfolio digitala eta GitHub proiektuak publikoki eskuragarri daude, edonork ikusi ditzake.</p>
                         </div>
                         
                         <div style="background: #f3e5f5; padding: 15px; border-radius: 8px;">
@@ -234,7 +234,7 @@
                         
                         <div style="background: #e8f5e9; padding: 15px; border-radius: 8px;">
                             <h5 style="color: #2e7d32; margin-bottom: 8px;">♿ Irisgarritasuna</h5>
-                            <p style="margin: 0;">6 irisgarritasun funtzionalitate inplementatuta ezgaitasunak dituzten ikasleentzat.</p>
+                            <p style="margin: 0;">6 irisgarritasun funtzionalitate inplementatuta.</p>
                         </div>
                     </div>
                 </div>
