--- a/bidalketa4.html
+++ b/bidalketa4.html
@@ -42,10 +42,14 @@
                         <p style="color: #f0f0f0; margin-bottom: 15px;">Behean duzue bidalketa honen azalpen osoa bideoan (5 minutu):</p>
                     </div>
                     <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; background: #000;">
-                        <!-- Bideoa hemen txertatuko da -->
-                        <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; color: white; font-size: 1.2em;">
-                            📹 Bideoa laster eskuragarri egongo da
-                        </div>
+                        <iframe 
+                            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" 
+                            src="https://www.youtube.com/embed/1m8gmSa1dew" 
+                            title="B1.4 Laugarren Bidalketa - Azalpena" 
+                            frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                            allowfullscreen>
+                        </iframe>
                     </div>
                 </div>
             </section>
@@ -186,7 +190,7 @@
                         <p style="margin-bottom: 10px;">Jupyter Notebook proiektu osoa GitHub-en eskuragarri:</p>
                         <div style="background: white; padding: 15px; border-radius: 8px; margin-top: 10px;">
                             <p style="margin-bottom: 10px;"><strong>🔗 GitHub Repository:</strong></p>
-                            <p style="margin: 0; word-break: break-all;"><a href="https://github.com/maldalur/Deep_Computer_Vision_Proiektuak" target="_blank">https://github.com/maldalur/Deep_Computer_Vision_Proiektuak</a></p>
+                            <p style="margin: 0; word-break: break-all;"><a href="https://github.com/maldalur/B1_portfolio_digitala/tree/main/Deep_Computer_Vision_Proiektuak" target="_blank">https://github.com/maldalur/B1_portfolio_digitala/Deep_Computer_Vision_Proiektuak</a></p>
                             
                             <h5 style="color: #7b1fa2; margin-top: 15px; margin-bottom: 8px;">📚 Edukia:</h5>
                             <ul style="margin-left: 20px; line-height: 1.8;">
