--- a/bidalketa3.html
+++ b/bidalketa3.html
@@ -19,6 +19,7 @@
             <a href="bidalketa2.html">📦 B1.2 Bigarren Bidalketa</a>
             <a href="bidalketa3.html" class="active">📦 B1.3 Hirugarren Bidalketa</a>
             <a href="bidalketa4.html">📦 B1.4 Laugarren Bidalketa</a>
+            <a href="bidalketa5.html">📦 B1.5 Bostgarren Bidalketa</a>
         </nav>
         
 
