--- a/bidalketa4.html
+++ b/bidalketa4.html
@@ -20,6 +20,7 @@
             <a href="bidalketa3.html">📦 B1.3 Hirugarren Bidalketa</a>
             <a href="bidalketa4.html" class="active">📦 B1.4 Laugarren Bidalketa</a>
             <a href="bidalketa5.html">📦 B1.5 Bostgarren Bidalketa</a>
+            <a href="bidalketa6.html">📦 B1.6 Seigarren Bidalketa</a>
         </nav>
 
         <div class="content">
