--- a/bidalketa5.html
+++ b/bidalketa5.html
@@ -20,6 +20,7 @@
             <a href="bidalketa3.html">📦 B1.3 Hirugarren Bidalketa</a>
             <a href="bidalketa4.html">📦 B1.4 Laugarren Bidalketa</a>
             <a href="bidalketa5.html" class="active">📦 B1.5 Bostgarren Bidalketa</a>
+            <a href="bidalketa6.html">📦 B1.6 Seigarren Bidalketa</a>
         </nav>
 
         <div class="content">
@@ -94,7 +95,7 @@
                 <div class="task-card" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white;">
                     <p>Bideo honetan, bost ataza hauen garapena eta portfolioan nola txertatu ditudan erakusten dut. Nire ahotsa eta aurpegia agertzen dira, egiletzaren inguruko arazoak ekiditeko. Bideo berdina portfolioan ere txertatuta dago.</p>
                     <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; background: #000; margin-top: 20px;">
-                        <iframe style="position: absolute; top:0; left:0; width:100%; height:100%;" src="https://www.youtube.com/embed/YOUR_VIDEO_ID" title="5. Bidalketa bideoa" frameborder="0" allowfullscreen></iframe>
+                        <iframe style="position: absolute; top:0; left:0; width:100%; height:100%;" src="https://www.youtube.com/embed/TlB4hrXApNw" title="5. Bidalketa bideoa" frameborder="0" allowfullscreen></iframe>
                     </div>
                 </div>
             </section>
