--- a/bidalketa6.html
+++ b/bidalketa6.html
@@ -34,29 +34,21 @@
                 </div>
             </section>
 
-            <!-- 4.B ATAZA -->
+            <!-- 4.B eta 4.C ATAZAK BATERATUTA -->
             <section>
-                <h2>📝 4.B ataza: Tresna digital bidezko ebaluazio formatiboaren estrategia</h2>
+                <h2>📝 4.B eta 4.C atazak: Ebaluazio formatiboa eta feedbacka LLM bidez</h2>
                 <div class="task-card">
-                    <p><strong>Helburua:</strong> Ikasleen ezagutza mailaren eboluzioa neurtzeko LLM (Large Language Model) baten bidezko ebaluazio formatiboa diseinatzea eta aplikatzea.</p>
-                    <p><strong>Prozesua:</strong> Ikasleek aurre-ebaluazio batetik abiatuta, LLM bat erabiliko dute (adib. ChatGPT) ikaskuntza prozesuan zehar eboluzioa neurtzeko. LLM-ak galdetegi pertsonalizatuak sortuko ditu, eta ikasleen erantzunak aztertuko ditu. Tresnaren erabilera eta emaitzak bideo batean erakutsiko dira.</p>
+                    <p><strong>Helburua:</strong> Ikasleen ezagutza mailaren eboluzioa neurtzeko eta feedback pertsonalizatua emateko LLM (Large Language Model) baten erabilera diseinatzea eta aplikatzea.</p>
+                    <p><strong>Prozesua:</strong> Ikasleek aurre-ebaluazio batetik abiatuta, LLM bat erabiliko dute (adib. ChatGPT) ikaskuntza prozesuan zehar eboluzioa neurtzeko eta feedbacka jasotzeko. LLM-ak galdetegi pertsonalizatuak sortuko ditu, ikasleen erantzunak aztertuko ditu eta feedback pertsonalizatua emango du. Tresnaren erabilera eta emaitzak bideo batean erakutsiko dira.</p>
                     <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; background: #000; margin-top: 20px;">
-                        <iframe style="position: absolute; top:0; left:0; width:100%; height:100%;" src="https://www.youtube.com/embed/VIDEO_ID_4B" title="4.B ataza bideoa" frameborder="0" allowfullscreen></iframe>
+                        <iframe style="position: absolute; top:0; left:0; width:100%; height:100%;" src="https://www.youtube.com/embed/4yjv-lc4cog" title="4.B eta 4.C atazak bideoa" frameborder="0" allowfullscreen></iframe>
                     </div>
-                    <p><strong>Nola ebidentziatu:</strong> 5 minutuko bideo bat sortu, non LLMaren erabilera eta neurtuko diren elementuak azalduko diren. Zure burua eta lokuzioa agertu behar dira.</p>
-                </div>
-            </section>
-
-            <!-- 4.C ATAZA -->
-            <section>
-                <h2>📝 4.C ataza: Tresna digital bidezko feedbacka</h2>
-                <div class="task-card">
-                    <p><strong>Helburua:</strong> Ikasleen eboluzioaren inguruko feedbacka emateko LLM baten erabilera diseinatzea eta aplikatzea.</p>
-                    <p><strong>Prozesua:</strong> Ikasleek feedbacka emateko LLM bat erabiliko dute (adib. ChatGPT) eta horren erabilera azalduko dute. LLM-ak ikasleen erantzunak aztertuko ditu eta feedback pertsonalizatua emango du. Feedbacka emateko estrategiak eta LLMaren abantailak bideo batean erakutsiko dira.</p>
-                    <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; background: #000; margin-top: 20px;">
-                        <iframe style="position: absolute; top:0; left:0; width:100%; height:100%;" src="https://www.youtube.com/embed/VIDEO_ID_4C" title="4.C ataza bideoa" frameborder="0" allowfullscreen></iframe>
-                    </div>
-                    <p><strong>Nola ebidentziatu:</strong> 5 minutuko bideo bat sortu, non LLMaren erabilera eta feedbackaren estrategiak azalduko diren. Zure burua eta lokuzioa agertu behar dira.</p>
+                    <p style="margin-top: 10px;">
+                        <a href="https://ai.studio/apps/drive/1s3Kb7nfcYYWYKXRG4moHOYIjiyHikmaC" target="_blank" rel="noopener">
+                            <span style="font-size:1.2em; vertical-align:middle;">🔗</span> Aplikazioa deskargatu edo ikusi (AI Studio)
+                        </a>
+                    </p>
+                    <p><strong>Nola ebidentziatu da:</strong> bideo bakar batean, LLMaren erabilera, ebaluazio formatiboa eta feedbackaren estrategiak azalduko dira. Zure burua eta lokuzioa agertu behar dira.</p>
                 </div>
             </section>
 
