Bideoak weborrira gehitzen

--- a/bidalketa6.html
+++ b/bidalketa6.html
@@ -58,7 +58,7 @@
                 <div class="task-card" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white;">
                     <p>Bideo honetan, 4.A, 4.B eta 4.C atazak nola burutu dituzun erakusten da. Portfolioan nabigatuz, aurre-ebaluazioa, ebaluazio formatiboa eta feedbackaren diseinua azalduko dira, lorpen adierazle guztiak betetzen direla ziurtatuz.</p>
                     <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; background: #000; margin-top: 20px;">
-                        <iframe style="position: absolute; top:0; left:0; width:100%; height:100%;" src="https://www.youtube.com/embed/VIDEO_ID_SUMMARY" title="6. Bidalketa bideoa" frameborder="0" allowfullscreen></iframe>
+                        <iframe style="position: absolute; top:0; left:0; width:100%; height:100%;" src="https://www.youtube.com/embed/rNOm7238S6w" title="6. Bidalketa bideoa" frameborder="0" allowfullscreen></iframe>
                     </div>
                     <p><strong>Oharrak:</strong> Bideoan zure burua eta lokuzioa agertu behar dira, eta azalpenak argiak eta zehatzak izan behar dira.</p>
                 </div>
