weborri printzipala hobetzen

--- a/index.html
+++ b/index.html
@@ -79,6 +79,30 @@
                     </ul>
                     <a href="bidalketa4.html" style="display:inline-block; margin-top:10px; background:#e65100; color:#fff; padding:10px 16px; border-radius:8px; text-decoration:none; font-weight:600;">🔍 Ikusi Bidalketa 4</a>
                 </div>
+                
+                <!-- B1.5 LABURPENA -->
+                <div class="bidalketa-card" style="background:#fce4ec; padding:20px; border-radius:15px; margin-top:25px; box-shadow:0 4px 12px rgba(0,0,0,0.08);">
+                    <h3 style="color:#ad1457; margin-top:0;">📦 B1.5 Bostgarren Bidalketa: Ikusmen Artifizialeko Sistemak</h3>
+                    <ul style="margin-left:20px; line-height:1.6; font-size:0.95em;">
+                        <li>Ikusmen artifizialaren oinarriak eta aplikazio nagusiak aztertu dira.</li>
+                        <li>Poster digitalak, irudi-prozesamendu erronkak (OpenCV) eta infografia interaktiboak sortu dira.</li>
+                        <li>World Café dinamika: erronka tekniko eta etikoen eztabaida eta aurkezpenak.</li>
+                        <li>Talde-lana eta aurkezpen digitalak bultzatu dira.</li>
+                    </ul>
+                    <a href="bidalketa5.html" style="display:inline-block; margin-top:10px; background:#ad1457; color:#fff; padding:10px 16px; border-radius:8px; text-decoration:none; font-weight:600;">🔍 Ikusi Bidalketa 5</a>
+                </div>
+
+                <!-- B1.6 LABURPENA -->
+                <div class="bidalketa-card" style="background:#ede7f6; padding:20px; border-radius:15px; margin-top:25px; box-shadow:0 4px 12px rgba(0,0,0,0.08);">
+                    <h3 style="color:#4527a0; margin-top:0;">📦 B1.6 Seigarren Bidalketa: Ebaluazio eta Feedback Tresnak</h3>
+                    <ul style="margin-left:20px; line-height:1.6; font-size:0.95em;">
+                        <li>Ebaluazio formatiboa eta feedback pertsonalizatua LLM baten bidez diseinatu eta aplikatu da.</li>
+                        <li>Ikasleen eboluzioa neurtzeko galdetegiak eta feedback automatizatua sortu dira.</li>
+                        <li>Tresna digitalen erabilera eta estrategiak azaldu dira bideo eta azalpen praktikoekin.</li>
+                        <li>Ikasleen gaitasun digitalen garapena ebidentziatu da.</li>
+                    </ul>
+                    <a href="bidalketa6.html" style="display:inline-block; margin-top:10px; background:#4527a0; color:#fff; padding:10px 16px; border-radius:8px; text-decoration:none; font-weight:600;">🔍 Ikusi Bidalketa 6</a>
+                </div>
 
                 <!-- Helburu Orokorra -->
                 <div class="task-card" style="margin-top:30px; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white;">
